@@ -1,3 +1,9 @@
+2003-05-10  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* generic/tkCanvPoly.c (PolygonToPostscript):
+	* tests/canvPs.test: correct crash when generating postscript for
+	a single-line polygon (point) with no color. [Bug #734498] (wilm)
+
 2003-04-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* macosx/tkMacOSXButton.c (TkpDisplayButton): correct typo for
